<resources>
    <string name="app_name">Example_21</string>
    <string name="label_first_name">First Name</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="label_last_name">Last Name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="label_phone">Phone Number</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="label_comment">Comment</string>
    <string name="hint_comment">Enter your feedback</string>
    <string name="button_send">Send</string>
    <string name="button_reset">Reset</string>
    <string name="logo_description">Company Logo</string>
</resources>