<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="mg.vamk.example_21.MainActivity">

    <!-- Company Logo -->
    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- First Name -->
    <TextView
        android:id="@+id/label_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_first_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/company_logo"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/label_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <!-- Last Name -->
    <TextView
        android:id="@+id/label_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_last_name"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_first_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/label_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <!-- Phone Number -->
    <TextView
        android:id="@+id/label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_last_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/label_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <!-- Comment -->
    <TextView
        android:id="@+id/label_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_comment"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comment"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top|start"
        app:layout_constraintTop_toBottomOf="@id/label_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <!-- Buttons -->
    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@id/button_send"
        app:layout_constraintEnd_toStartOf="@id/button_send" />

</androidx.constraintlayout.widget.ConstraintLayout>